css/theme.css
@import 'https://fonts.googleapis.com/css?family=Allura';
@import 'https://fonts.googleapis.com/css?family=Abril+Fatface';

/* Общие классы */
* {box-sizing: border-box;}
.box {width: 100%; position: relative;}
.box:after {content: ""; display: block; clear: both;}
.center {text-align: center;}
img {border: 0 none; height: auto; max-width: 100%; vertical-align: middle;}

/* Подгонка под старые браузеры: делаем HTML5 элементы блочными */
article, aside, details, figcaption, figure, footer, header, main, menu, nav, section, summary {display: block;}

html, body {width: 100%; overflow-x: hidden; margin: 0;}
body{color:#777777; background: #887db2; font-size: 15px; line-height: 22px;
     font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;}
.wrapper{position: relative; left: 0; transition: left 0.3s ease-in-out;}
.container{max-width: 1200px; padding: 0 15px; margin: 0 auto;}
#sidebar{position: fixed; top: 0; bottom: 0; left: -270px; max-width: 100%; width: 270px; background: #33373b;
         overflow: auto; transition: left 0.3s ease-in-out;}
#close_sidebar{position: absolute; top: 0; bottom: 0; left: 0; right: 0; background: rgba(0,0,0,0.1); z-index: 1; display: none;}
.open-sidebar.wrapper{left: 270px;}
.open-sidebar #sidebar{left: 0;}
.open-sidebar #close_sidebar{display: block;}
hr{box-sizing: content-box; height:0; margin: 15px 0; border:0; border-top: 1px solid #d2d3d4;}


/* Фоновый рисунок вверху. ВАЖНО: здесь нужно указать такой же цвет фона, как и для body! */
.tm_background{width: 100%; max-height: 100vh; position: absolute; background-size: auto;}
@media (min-width: 1921px) { .tm_background{background: url("/images/body_max.jpg") no-repeat top center; background-size: cover;} }
@media (max-width: 1920px) { .tm_background{background: url("/images/body1920.jpg") no-repeat top center; height:1080px;} }
@media (max-width: 1600px) { .tm_background{background: url("/images/body1600.jpg") no-repeat top center; height: 900px;} }
@media (max-width: 1220px) { .tm_background{background: url("/images/body1220.jpg") no-repeat top center; height: 686px;} }
@media (max-width:  960px) { .tm_background{background: url("/images/body_960.jpg") no-repeat top center; height: 540px;} }
@media (max-width:  768px) { .tm_background{background: url("/images/body_768.jpg") no-repeat top center; height: 432px;} }
@media (max-width:  480px) { .tm_background{background: url("/images/body_480.jpg") no-repeat top center; height: 270px;} }
.tm_background:after{content: ""; left: 0; right: 0; top: 0; bottom: -1px; position: absolute;
    background-image: linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(0,0,0,0) 70%, #887db2 100%);}


.navbar{text-align: center; padding: 50px 0 70px 0; color: #4b5052; position: relative;}
.main_page .navbar{padding: 130px 0 150px 0;}
.navbar a{text-decoration:none; color:inherit; display: inline-block;}
.navbar a:hover{text-decoration: none; color:inherit;}

/* Логотип */
.okfilm{font-size:60px; text-align:center}
/*.navbar .okfilm{position: absolute; top: -50%; left: 50%; transform: translateX(-50%);}*/
/*.main_page .okfilm{position: relative;}*/
.okfilm > a{line-height: normal;}
.okfilm_ok{font-family: Allura; margin-right:10px; vertical-align:middle}
.okfilm_film{font-family: Abril Fatface;}


/* Главное меню */
.menu{margin-top: 7px;}
.menu a:hover{color: #41656f;}
.menu ul{list-style: outside none none; margin: 0; padding: 0; width: auto;}
.menu > ul{display:inline-block;}
.menu > ul > li{float:left; margin:0 5px; background: rgba(0,0,0,0); display:inline-block;}
.menu a.top{height: 40px; line-height: 40px; padding:0 10px; font-size: 16px; text-transform: uppercase;
            background: rgba(136,125,178,0.5); border: 2px solid rgba(75,80,82,0.1);}
.menu a.top:hover{background: rgba(253,253,254,0.7); border: 2px solid rgba(75,80,82,0.2);}
.menu .submenu{position: absolute; padding-top: 0; width: auto; min-width: 150px; text-align: left;
               overflow: hidden; height: 0; transition: height 0.2s linear, padding-top 0.2s linear;}
.menu .submenu ul{padding: 20px; background: rgba(253,253,254,0.7); border: 2px solid rgba(75,80,82,0.2);}
.menu .submenu a{padding: 5px 10px; text-transform:none;}
.menu > ul > li:hover .submenu{height: 100%; padding-top: 10px;}
a.mMenuToggle{font-size: 20px; position: relative; top: 50%; transform: translateY(-50%); display: none;}
.mMenuToggle i{font-size: 20px; padding: 0 3px; background-color: rgba(253,253,254,0.5); box-shadow: 0 0 5px 3px rgba(253,253,254,0.5);}
.mMenuToggle.fixed{position: fixed; top: 25px; z-index: 1; transform: translateY(-70px);}
.mMenuToggle.fixed i{transform: translateY(47px);}
@media (max-width: 767px) {
    .menu > ul{display: none;}
    .menu{position: absolute; top: 0; left: 0; height: 50px; margin: 0; padding: 0; text-align: left;}
    a.mMenuToggle{display: block;}
    .noscript .menu > ul{position: relative; top: 25%; padding: 10px; background: rgba(253,253,254,0.7); border: 2px solid rgba(75,80,82,0.2);}
    .noscript .menu > ul > li{float: none; display: block;}
    .noscript .menu ul a.top{background: transparent; border: none;}
    .noscript .menu:hover > ul{display: block;}
}
/* Главное меню - мобильная версия */
.sidemenu ul{list-style: outside none none; margin: 0; padding: 0; width: auto;}
.sidemenu > ul > li{border-bottom: 1px solid #3f4449;}
.sidemenu a{display: inline-block; width: 100%; padding: 10px 15px; color: #e1eaec;}
.sidemenu .submenu {background: #383c40}
.sidemenu .submenu li{border-top: 1px solid #3f4449; margin-left: 30px;}
.sidemenu .submenu a{padding-left: 5px; color: rgba(225,234,236,0.6);}
.sidemenu a:hover{text-decoration: none; color: #effcff; background: #2a2d30;}



/* Хлебные крошки */
.breadcrumb{margin-bottom: 25px; padding: 25px 40px; background: #f6f8f9; list-style: outside none none; font-size: 0.001px;}
/* ... */

